@@ -1,3 +1,7 @@
+2007-03-13 Sarka Todorova <sarka.todorova@cern.ch>
+	* station layer representation identified
+	* tagged MuonTrackingGeometry-00-00-35
+
 2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
 	* fixed csc layer identification
 	* tagged MuonTrackingGeometry-00-00-34
